scrollbar fix

--- a/branches/typchon_0.2.0/plugins/themes/climatecolab-theme/docroot/_diffs/css/ui.dynatree.css
+++ b/branches/typchon_0.2.0/plugins/themes/climatecolab-theme/docroot/_diffs/css/ui.dynatree.css
@@ -10,7 +10,7 @@ ul.dynatree-container
 	margin: 0; /* issue 201 */
 	background-color: white;
 	/*border: 1px dotted gray;*/
-	overflow: auto;
+	overflow: none;
 	height: 100%; /* issue 263 */
 }
 
